# trendspyg

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLI.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.txt  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  pyproject.toml  test_real_download.py  test_trendspy.py
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
benchmarks/: README.md  run_benchmarks.py
docs/: API.md
examples/: README.md  async_parallel_fetching.py  batch_with_progress.py  caching_example.py  compare_keywords.py  interest_over_time.py  monitoring.py  normalized_output.py
scripts/: check_coverage_floor.py
tests/: conftest.py  test_async_mocked.py  test_cli.py  test_comparison.py  test_coverage_floor.py  test_csv_downloader.py  test_downloader_integration.py  test_downloader_mocked.py  test_explore.py  test_mcp_server.py  test_monitor.py  test_normalize.py  test_output_formats.py  test_public_api.py  test_rss_downloader.py  test_rss_mocked.py  test_utils.py  test_validation.py
trendspyg/: __init__.py  cli.py  config.py  downloader.py  exceptions.py  explore.py  mcp_server.py  monitor.py  normalize.py  rss_downloader.py  types.py  utils.py  version.py
